tests/errors/array_bounds_check_16.f90
program array_bounds_check_16
    integer :: a(5)
    a = 1
    print *, a(10)
end program
